--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -5,7 +5,7 @@
     .contents__group
       Group
     .contents__edit
-      = link_to 'Edit'
+      Edit
   .contents__midle
     .contents__name
       masa
