--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -5,7 +5,9 @@
     .contents__group
       Group
     .contents__edit
-      Edit
+      = link_to"#",class:"group" do
+        .group
+          Edit
   .contents__midle
     .contents__name
       masa
