--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -89,6 +89,10 @@
   color: #999999;
   }
 
+  .group{
+    text-decoration: none;
+  }
+
   .contents__midle{
   background-color: #fafafa;
   height: calc(100vh - 190px);
