ユーザー管理

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -22,7 +22,7 @@
   justify-content: space-between;
   text-align: right;
   }
-  &__icon{
+  &__icons{
   margin-right: 100px;
   width: 60px;
   }
