--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -12,24 +12,8 @@
           Edit
 
   .contents__midle
-    .message
-      .upper-message 
-        .contents__name
-          masa
-        .contents__time
-          2019/11/20(Wed)
-      .contents__message
-      こんにちは
+    = render @messages
       
-    .message
-      .upper-message 
-        .contents__name
-          masa
-        .contents__time
-          2019/11/20(Wed)
-      .contents__message
-      こんにちは
-
 
   .form
     = form_for [@group, @message] do |f|
