非同期通信

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -115,6 +115,7 @@
     bottom: 90px;
     left: 300px;
     z-index: 0;
+    overflow: scroll;
     .message{
       .upper-message {
         display: flex;
